Logo overflow fix

--- a/src/components/domain/index/about/about.module.scss
+++ b/src/components/domain/index/about/about.module.scss
@@ -15,6 +15,10 @@
       flex-basis: 100%;
       flex-shrink: 0;
 
+      > svg {
+        max-width: 90%;
+      }
+
       @media (min-width: $breakpoints-xl) {
         flex-basis: 40%;
       }
